<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.MainActivity">


    <LinearLayout
        android:id="@+id/phoneLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textColor="#000" />


        <EditText
            android:id="@+id/phonEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:hint="+79xxxxxxxxx"
            android:inputType="phone"
            android:maxLength="12"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#000"
            android:textColorHint="#c5c5c5" />

        <Button
            android:id="@+id/phoneContinueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/get_verification_code" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/codeLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/verification_code"
            android:textAlignment="center"
            android:textColor="#000" />


        <EditText
            android:id="@+id/codeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:hint="000000"
            android:inputType="phone"
            android:maxLength="6"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#000"
            android:textColorHint="#c5c5c5" />

        <TextView
            android:id="@+id/resendCodeTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/didn_t_get_otp_resend"
            android:textAlignment="center"
            android:textColor="#777777"
            android:textSize="15dp" />

        <Button
            android:id="@+id/codeSubmitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/assert_verification_code" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>